[package]
name = "noesis-ship"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/hankh1844/noesis-ship-rs"
description = "Rust NATS communication platform for multi-agent AI systems"
keywords = ["nats", "multi-agent", "ai", "communication", "pubsub"]
categories = ["network-programming", "asynchronous"]
readme = "README.md"
rust-version = "1.85"

[features]
default = []
integration = []

[dependencies]
async-nats = "0.38"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
tracing = "0.1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
tracing-subscriber = "0.3"
